fixed an issue with oversized entry heading breaking ui on mobile

--- a/app/src/styles/entry.scss
+++ b/app/src/styles/entry.scss
@@ -9,14 +9,21 @@
 
   .entry-header {
     width: 100%;
+    flex-wrap: nowrap;
+    align-items: flex-start;
 
     h1 {
       font-size: 2.5rem;
       line-height: 2.5rem;
       font-weight: lighter;
+
+      overflow-wrap: break-word;
+      hyphens: auto;
     }
 
     .entry-close {
+      min-width: 2.5rem;
+      min-height: 2.5rem;
       width: 2.5rem;
       height: 2.5rem;
 
@@ -38,6 +45,25 @@
 
   .entry-content {
     overflow: auto;
+
+    .tag {
+      display: inline-block;
+      border-radius: 999px;
+      letter-spacing: .05rem;
+      background-color: $blue;
+      color: ivory;
+      padding: .1rem .5rem;
+      font-size: .9em;
+      box-shadow: .1rem .1rem .2rem rgba(0 0 0 / .5);
+      position: relative;
+
+      transition: all .25s ease-in-out;
+
+      &:hover {
+        background-color: ivory;
+        color: $tardis;
+      }
+    }
 
     h1, h2, h3, h4, h5, h6 {
       font-weight: normal;
